Add text to the footer of the index file

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,10 @@ html {
 }
 
 h1 {
-  font-family: PT Sans;
-  line-height:
+  font-family: sans-serif;
+  font-weight: normal
+}
+
+i {
+  font-style: italic;
 }
