--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,6 @@ html {
 }
 
 h1 {
-  font-family: sans-serif;
   font: "PT Sans";
   color: #3f1622;
 }
@@ -12,4 +11,5 @@ h1 {
 i {
   font-style: italic;
   color: #3f1622;
+  font: "PT Sans";
 }
